grammars/weidu-tp2/grammar.js
        source_file: ($) => choice(
            repeat(choice($._top_level, $._action, $.top_level_assignment)),
            $.patch_file
        ),

        // Patch-only file (e.g., .tpp includes) - entire file is patches
        string: ($) => choice($.tilde_string, $.double_string, $.five_tilde_string, $.percent_string),

        tilde_string: ($) => seq("~", optional($.tilde_content), "~"),
        tilde_content: ($) => /[^~]+/,

        number: ($) =>
            choice(
                /-?[0-9]+(\.[0-9]+)*/,
                /0[xX][0-9a-fA-F]+/,
                /0[oO][0-7]+/,
                /0[bB][01]+/,
                /#-?[0-9]+/
            ),

        identifier: ($) => /[A-Za-z_][A-Za-z0-9_#-]*/,

        // Unquoted resource reference (e.g., script.bcs, 00MYFILE.itm)
        comment: ($) => seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
        line_comment: ($) => seq("//", /[^\n]*/),

        // =========================================
        // VARIABLE REFERENCES
        // =========================================

        variable_ref: ($) =>
            choice(
                $.identifier,
                $.var_name_numeric,
                seq("%", choice($.identifier, $.var_name_numeric), "%")
            ),

        // Variable name starting with a number (valid inside %...% and as array keys)
        _assignable: ($) => seq(optional("EVAL"), choice($.identifier, $.var_name_numeric, $.array_access, $.string)),

        // =========================================
        // MODIFIERS / FLAGS
        // =========================================

        _opt_no_backup: ($) => prec(10, choice("+", "-")),
        _opt_glob: ($) => choice("GLOB", "NOGLOB"),
        _value: ($) => $._expr,

        // Simple value excludes OR/AND binary expressions - used where boolean operators shouldn't appear
        _patch: ($) =>
            choice(
                // Write operations
                $.patch_write_byte,
                $.patch_write_short,
                $.patch_write_long,
                $.patch_write_ascii,
                $.patch_write_ascii_list,
                $.patch_write_asciil,
                // Read operations
                $.patch_read_byte,
                $.patch_read_short,
                $.patch_read_long,
                $.patch_read_ascii,
                $.patch_read_strref,
                $.patch_get_strref,
                $.patch_lookup_ids_symbol_of_int,
                // String operations
                $.patch_say,
                $.patch_sprint,
                $.patch_text_sprint,
                $.patch_snprint,
                $.patch_sprintf,
                $.patch_to_upper,
                $.patch_to_lower,
                $.patch_spaces,
                $.patch_quote,
                $.patch_source_biff,
                // Assignment
                $.patch_set,
                $.patch_assignment,
                $.patch_increment,
                $.patch_decrement,
                // Control flow
                $.patch_if,
                $.patch_match,
                $.patch_for,
                $.patch_while,
                $.patch_php_each,
                $.patch_for_each,
                // Text manipulation
                $.patch_replace,
                $.patch_replace_textually,
                $.patch_replace_evaluate,
                // Buffer operations
                $.patch_evaluate_buffer,
                $.patch_insert_bytes,
                $.patch_delete_bytes,
                $.patch_append_file,
                // 2DA operations
                $.patch_read_2da_entry,
                $.patch_read_2da_entries_now,
                $.patch_read_2da_entry_former,
                $.patch_set_2da_entry,
                $.patch_set_2da_entry_later,
                $.patch_set_2da_entries_now,
                $.patch_count_2da_cols,
                $.patch_count_2da_rows,
                $.patch_count_regexp_instances,
                $.patch_pretty_print_2da,
                $.patch_insert_2da_row,
                $.patch_remove_2da_row,
                // Offset array operations
                $.patch_get_offset_array,
                $.patch_get_offset_array2,
                // Store operations
                $.patch_remove_store_item,
                $.patch_add_store_item,
                // CRE item operations
                $.patch_replace_cre_item,
                $.patch_remove_cre_item,
                $.patch_add_cre_item,
                $.patch_add_memorized_spell,
                $.patch_remove_memorized_spell,
                $.patch_remove_memorized_spells,
                $.patch_add_known_spell,
                $.patch_remove_known_spell,
                $.patch_remove_known_spells,
                $.patch_remove_cre_effects,
                $.patch_add_map_note,
                $.patch_set_bg2_proficiency,
                // Functions
                $.patch_launch_function,
                $.patch_launch_macro,
                $.patch_replace_bcs_block,
                // Arrays
                $.patch_define_array,
                $.patch_define_associative_array,
                $.patch_clear_array,
                $.patch_sort_array_indices,
                // Exception handling
                $.patch_try,
                // Inner patches
                $.inner_patch,
                $.inner_patch_save,
                $.inner_patch_file,
                $.inner_action,
                // Misc
                $.patch_print,
                $.patch_log,
                $.patch_warn,
                $.patch_fail,
                $.patch_abort,
                $.patch_include,
                $.patch_reraise,
                $.patch_silent,
                $.patch_verbose,
                $.patch_compile_baf_to_bcs,
                $.patch_decompile_bcs_to_baf,
                $.patch_compile_d_to_dlg,
                $.patch_decompile_dlg_to_d,
                $.patch_decompile_and_patch,
                $.patch_decompress_replace_file,
                $.patch_compress_replace_file,
                $.patch_decompress_into_var
            ),

        // Write patches
        patch_write_byte: writePatch("WRITE_BYTE"),
        patch_write_short: writePatch("WRITE_SHORT"),
        patch_write_long: writePatch("WRITE_LONG"),

        patch_say: ($) =>
            seq(choice("SAY", "SAY_EVALUATED"), field("offset", $._value), field("text", $._value)),

        patch_sprint: sprintOp("SPRINT"),
        patch_text_sprint: sprintOp("TEXT_SPRINT"),

        _assign_op: ($) => choice("=", "+=", "-=", "*=", "/=", "|=", "&=", "||=", "&&="),

        // Control flow
        patch_replace_textually: ($) =>
            prec.right(
                seq(
                    "REPLACE_TEXTUALLY",
                    optional($.search_flags),
                    field("regexp", $._value),
                    field("replacement", $._value),
                    optional(seq("(", field("count", $._value), ")"))
                )
            ),

        patch_evaluate_buffer: ($) => "EVALUATE_BUFFER",

        _action: ($) =>
            choice(
                // File operations
                $.action_copy,
                $.action_copy_existing,
                $.action_copy_existing_regexp,
                $.action_copy_large,
                $.action_copy_random,
                $.action_copy_all_gam_files,
                $.action_compile,
                $.action_create,
                $.action_extend_top,
                $.action_extend_bottom,
                $.action_append,
                $.action_append_col,
                $.action_append_outer,
                $.action_delete,
                $.action_move,
                $.action_mkdir,
                // Control flow
                $.action_if,
                $.action_match,
                $.action_try,
                $.outer_for,
                $.outer_while,
                $.action_for_each,
                $.action_php_each,
                // Variables
                $.action_outer_set,
                $.action_outer_sprint,
                $.action_outer_text_sprint,
                $.action_with_tra,
                $.action_outer_patch,
                $.action_outer_patch_save,
                $.action_outer_inner_patch,
                $.action_outer_inner_patch_save,
                // Includes
                $.action_include,
                $.action_reinclude,
                // Functions/macros
                $.action_define_macro,
                $.action_define_patch_macro,
                $.action_define_function,
                $.action_define_patch_function,
                $.action_launch_macro,
                $.action_launch_function,
                // Arrays
                $.action_define_array,
                $.action_define_associative_array,
                $.action_clear_array,
                // String/tra
                $.action_string_set,
                $.action_load_tra,
                // Game data modification
                $.action_add_projectile,
                $.action_add_sectype,
                $.action_add_area_type,
                $.action_add_spell,
                $.action_add_kit,
                // System/execution
                $.action_at_now,
                $.action_at_interactive_exit,
                $.action_bash_for,
                $.action_decompress_biff,
                // Misc
                $.action_print,
                $.action_warn,
                $.action_fail,
                $.action_clear_memory,
                $.action_silent,
                $.action_verbose,
                $.action_to_upper,
                $.action_to_lower,
                $.action_get_strref,
                $.action_disable_from_key,
                $.action_random_seed,
                $.action_readln,
                $.inlined_file
            ),

        // File operations
        action_copy: ($) =>
            seq(
                "COPY",
                optional($._opt_no_backup),
                optional($._opt_glob),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when)
            ),

        action_copy_existing: ($) =>
            seq(
                "COPY_EXISTING",
                optional($._opt_no_backup),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when)
            ),

        action_copy_existing_regexp: ($) =>
            seq(
                "COPY_EXISTING_REGEXP",
                optional($._opt_no_backup),
                optional($._opt_glob),
                repeat1($.file_pair),
                optional($.patches),
                optional($.when)
            ),

        file_pair: ($) => seq(field("from", $._value), field("to", $._value)),

        // Patches inside actions - either bare patches or BEGIN/END block
        // Named rule (not hidden) so context detection can find it in AST
        patches: ($) => prec.right(choice(repeat1($._patch), $.patch_block)),

        patch_block: ($) => prec(-10, seq("BEGIN", repeat($._patch), "END")),

        // When clause: IF_SIZE_IS, IF regexp, UNLESS regexp, IF_EXISTS, BUT_ONLY, BUT_ONLY_IF_IT_CHANGES
        // All can appear in any order, multiple IF/UNLESS allowed
        action_compile: ($) =>
            prec.right(
                seq(
                    "COMPILE",
                    optional(choice("EVALUATE_BUFFER", "EVAL")),
                    repeat1(field("source", $._value)),
                    optional(choice("EVALUATE_BUFFER", "EVAL")),
                    optional(seq("USING", repeat1(field("tra", $._value))))
                )
            ),

        action_extend_top: extendAction("EXTEND_TOP"),
        action_extend_bottom: extendAction("EXTEND_BOTTOM"),

        action_append: appendAction("APPEND"),
        action_append_col: appendAction("APPEND_COL"),

        action_delete: ($) =>
            prec.right(seq("DELETE", optional($._opt_no_backup), repeat1(field("file", $._value)))),

        action_create: ($) =>
            seq(
                "CREATE",
                field("type", $.identifier),
                optional(seq("VERSION", field("version", $._value))),
                field("resref", $._value),
                optional($.patches)
            ),

        // Control flow
        action_if: ($) =>
            seq(
                "ACTION_IF",
                field("condition", $._value),
                optional("THEN"),
                "BEGIN",
                repeat($._action),
                "END",
                optional(
                    seq(
                        "ELSE",
                        choice(
                            seq("BEGIN", repeat($._action), "END"),
                            $.action_if,
                            $._action // Single action without BEGIN...END
                        )
                    )
                )
            ),

        action_outer_set: ($) =>
            seq(
                "OUTER_SET",
                optional("EVALUATE_BUFFER"),
                choice(
                    seq(field("var", $._assignable), $._assign_op, field("value", $._value)),
                    seq(choice("++", "--"), field("var", $._assignable))
                )
            ),

        action_outer_sprint: sprintOp("OUTER_SPRINT"),
        action_outer_text_sprint: sprintOp("OUTER_TEXT_SPRINT"),

        action_include: ($) => seq("INCLUDE", field("file", $._value)),
        action_launch_function: ($) =>
            seq(
                choice("LAUNCH_ACTION_FUNCTION", "LAF"),
                field("name", choice($.identifier, $.string)),
                repeat($._func_call_param),
                "END"
            ),

        _func_call_param: ($) => choice($.int_var_call, $.str_var_call, $.ret_call, $.ret_array_call),

        // In function calls, left-hand side of assignments is always an identifier/string, not an expression
        action_clear_memory: ($) =>
            choice(
                "CLEAR_MEMORY",
                "CLEAR_ARRAYS",
                "CLEAR_CODES",
                "CLEAR_INLINED",
                "CLEAR_EVERYTHING",
                "CLEAR_IDS_MAP"
            ),

        _top_level: ($) =>
            choice(
                $.backup_directive,
                $.author_directive,
                $.support_directive,
                $.version_flag,
                $.readme_directive,
                $.no_if_eval_bug_flag,
                $.auto_eval_strings_flag,
                $.allow_missing_directive,
                $.auto_tra_directive,
                $.language_directive,
                $.component,
                $.inlined_file,
                $.always_block
            ),

        backup_directive: ($) => seq("BACKUP", field("path", $._value)),
        author_directive: ($) => seq("AUTHOR", field("email", $._value)),
        version_flag: ($) => seq("VERSION", field("version", $._value)),
        language_directive: ($) =>
            prec.right(
                seq(
                    "LANGUAGE",
                    field("name", $._value),
                    field("directory", $._value),
                    repeat1(field("tra_file", $._value))
                )
            ),

        component: ($) =>
            seq(
                alias("BEGIN", $.component_begin),
                field("name", $._value),
                repeat($._componentFlag),
                repeat($._action)
            ),

        _componentFlag: ($) =>
            choice(
                $.designated_flag,
                $.deprecated_flag,
                $.subcomponent_flag,
                $.group_flag,
                $.require_predicate_flag,
                $.require_component_flag,
                $.forbid_component_flag,
                $.label_flag
            ),
