grammars/weidu-tp2/test/corpus/actions.txt
================================================================================
COPY action
================================================================================

COPY ~mymod/sword.itm~ ~override/m#sword.itm~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY with multiple pairs
================================================================================

COPY ~mymod/a.itm~ ~override/a.itm~
     ~mymod/b.itm~ ~override/b.itm~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY_EXISTING action
================================================================================

COPY_EXISTING ~spell.spl~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy_existing
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY_EXISTING_REGEXP with GLOB
================================================================================

COPY_EXISTING_REGEXP GLOB ~HARM.*.ITM~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy_existing_regexp
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY with no backup (+)
================================================================================

COPY + ~mymod/temp.itm~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
COPY inlined only (-)
================================================================================

COPY - ~mymod/temp.itm~ ~override~

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
DELETE action
================================================================================

DELETE ~mymod/temp.txt~

--------------------------------------------------------------------------------

(source_file
  (action_delete
    file: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
COMPILE action
================================================================================

COMPILE ~mymod/scripts~

--------------------------------------------------------------------------------

(source_file
  (action_compile
    source: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
COMPILE with USING
================================================================================

COMPILE ~mymod/dialog.d~ USING ~mymod/lang/%s/dialog.tra~

--------------------------------------------------------------------------------

(source_file
  (action_compile
    source: (value
      (string
        (tilde_string
          (tilde_content))))
    tra: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
CREATE action
================================================================================

CREATE ITM ~m#sword~

--------------------------------------------------------------------------------

(source_file
  (action_create
    type: (identifier)
    resref: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
CLEAR_MEMORY action
================================================================================

CLEAR_MEMORY

--------------------------------------------------------------------------------

(source_file
  (action_clear_memory))

================================================================================
ACTION_IF
================================================================================

ACTION_IF 1 THEN BEGIN
  PRINT ~yes~
END

--------------------------------------------------------------------------------

(source_file
  (action_if
    condition: (value
      (number))
    (action_print
      message: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
OUTER_SET
================================================================================

OUTER_SET myvar = 5

--------------------------------------------------------------------------------

(source_file
  (action_outer_set
    var: (identifier)
    value: (value
      (number))))

================================================================================
INCLUDE
================================================================================

INCLUDE ~mymod/lib.tpa~

--------------------------------------------------------------------------------

(source_file
  (action_include
    file: (value
      (string
        (tilde_string
          (tilde_content))))))

================================================================================
DEFINE_ACTION_FUNCTION
================================================================================

DEFINE_ACTION_FUNCTION my_func BEGIN
  PRINT ~hello~
END

--------------------------------------------------------------------------------

(source_file
  (action_define_function
    name: (identifier)
    (action_print
      message: (value
        (string
          (tilde_string
            (tilde_content)))))))

================================================================================
LAF call
================================================================================

LAF my_func END

--------------------------------------------------------------------------------

(source_file
  (action_launch_function
    name: (identifier)))
