grammars/weidu-tp2/test/corpus/basics.txt
================================================================================
Empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Comments
================================================================================

// line comment
/* block comment */

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (comment))

================================================================================
Backup directive
================================================================================

BACKUP ~mymod/backup~

--------------------------------------------------------------------------------

(source_file
  (backup_directive
    path: (string
      (tilde_string
        (tilde_content)))))

================================================================================
Author directive
================================================================================

AUTHOR ~user@example.com~

--------------------------------------------------------------------------------

(source_file
  (author_directive
    email: (string
      (tilde_string
        (tilde_content)))))

================================================================================
Version flag
================================================================================

VERSION ~1.0~

--------------------------------------------------------------------------------

(source_file
  (version_flag
    version: (string
      (tilde_string
        (tilde_content)))))

================================================================================
Language directive
================================================================================

LANGUAGE ~English~ ~english~ ~english/setup.tra~

--------------------------------------------------------------------------------

(source_file
  (language_directive
    name: (string
      (tilde_string
        (tilde_content)))
    directory: (string
      (tilde_string
        (tilde_content)))
    tra_file: (string
      (tilde_string
        (tilde_content)))))

================================================================================
Simple component
================================================================================

BEGIN ~My Component~

--------------------------------------------------------------------------------

(source_file
  (component
    name: (string
      (tilde_string
        (tilde_content)))))

================================================================================
Component with designated
================================================================================

BEGIN ~My Component~
DESIGNATED 100

--------------------------------------------------------------------------------

(source_file
  (component
    name: (string
      (tilde_string
        (tilde_content)))
    (designated_flag
      number: (number))))
