grammars/weidu-tp2/test/corpus/inlined.txt
================================================================================
Inlined file with space after marker
================================================================================

<<<<<<<< myfile.txt
content here
>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))

================================================================================
Inlined file without space after marker
================================================================================

<<<<<<<<myfile.txt
content here
>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))

================================================================================
Inlined file with body on same line as end marker
================================================================================

<<<<<<<< myfile.txt
aaa>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))

================================================================================
Inlined file single line (no space, body on same line)
================================================================================

<<<<<<<<myfile.txt
aaa>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))

================================================================================
Inlined file with empty body
================================================================================

<<<<<<<< myfile.txt
>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))

================================================================================
Inlined file with greater-than signs in body
================================================================================

<<<<<<<< myfile.txt
a > b
c >> d
e >>> f
>>>>>>>>

--------------------------------------------------------------------------------

(source_file
  (inlined_file
    filename: (inlined_filename)
    body: (inlined_body)))
