grammars/weidu-tp2/test/corpus/patches.txt
================================================================================
SAY patch
================================================================================

COPY ~mymod/item.itm~ ~override~
BEGIN
  SAY 0x08 ~New Name~
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_say
          offset: (value
            (number))
          text: (value
            (string
              (tilde_string
                (tilde_content)))))))))

================================================================================
PATCH_PRINT
================================================================================

COPY ~mymod/item.itm~ ~override~
BEGIN
  PATCH_PRINT ~Processing file~
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_print
          message: (value
            (string
              (tilde_string
                (tilde_content)))))))))

================================================================================
TEXT_SPRINT
================================================================================

COPY ~mymod/item.itm~ ~override~
BEGIN
  TEXT_SPRINT myvar ~hello~
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_text_sprint
          var: (value
            (variable_ref
              (identifier)))
          value: (value
            (string
              (tilde_string
                (tilde_content)))))))))

================================================================================
REPLACE_TEXTUALLY
================================================================================

COPY ~mymod/script.baf~ ~override~
BEGIN
  REPLACE_TEXTUALLY ~oldtext~ ~newtext~
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_replace_textually
          regexp: (value
            (string
              (tilde_string
                (tilde_content))))
          replacement: (value
            (string
              (tilde_string
                (tilde_content)))))))))

================================================================================
EVALUATE_BUFFER
================================================================================

COPY ~mymod/script.baf~ ~override~
BEGIN
  EVALUATE_BUFFER
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_evaluate_buffer)))))

================================================================================
TO_UPPER and TO_LOWER
================================================================================

COPY ~mymod/item.itm~ ~override~
BEGIN
  TO_UPPER myvar
  TO_LOWER othervar
END

--------------------------------------------------------------------------------

(source_file
  (action_copy
    (file_pair
      from: (value
        (string
          (tilde_string
            (tilde_content))))
      to: (value
        (string
          (tilde_string
            (tilde_content)))))
    (patches
      (patch_block
        (patch_to_upper
          var: (identifier))
        (patch_to_lower
          var: (identifier))))))

